Adding About Page

--- a/Level-1/Task_1_PORTFOLIO/style.css
+++ b/Level-1/Task_1_PORTFOLIO/style.css
@@ -22,6 +22,10 @@
     --darker: #000;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     background: var(--white-200);
     overflow-x: hidden;
@@ -61,6 +65,11 @@ nav {
     display: none;
 }
 
+.nav-toggle:checked .nav-toggle-label  {
+    transform: rotate(45deg);
+    background: red;
+}
+
 .nav-links {
     list-style: none;
     display: flex;
@@ -72,7 +81,7 @@ nav {
     right: 0;
     width: 100%;
     background: var(--white-100);
-    padding: 1rem 0;
+    padding: 2rem 0;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     transform: scaleY(0);
     transform-origin: top right;
@@ -98,9 +107,10 @@ nav {
 .nav-toggle-label span::after {
     display: block;
     content: '';
-    background-color: var(--violet-200);
-    height: 2px;
+    background-color: var(--violet-c);
+    height: 3px;
     width: 100%;
+    border-radius: 30px;
     position: absolute;
     left: 0;
     transition: all 0.3s ease-in-out;
@@ -122,8 +132,16 @@ nav {
     transform: scaleY(1);
 }
 .nav-toggle:checked + .nav-links .link {
+    animation: overlaying 1s linear forwards;
     opacity: 1;
     transform: translateY(0);
+}
+
+.logo-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
 }
 
 .logo {
@@ -133,6 +151,15 @@ nav {
 .logo > a > img {
     width: 100%;
     height: 100%;
+}
+
+.logo-wrapper .ramdi,.elmostafa {
+    font-family: var(--days);
+    text-transform: uppercase;
+    color: var(--violet-c);
+    pointer-events: none;
+    font-size: 0.7rem;
+    letter-spacing: 2px;
 }
 
 .nav-links {
@@ -191,16 +218,10 @@ nav {
     transition: .3s all;
 }
 
-section {
-    width: 100vw;
-    height: 100vh;
-}
-
 /************Hero-Section************/
 .hero {
     margin-top: 5rem;
     max-width: 800px;
-    width: 100%;
     height: 700px;
 }
 .hero-img {
@@ -285,13 +306,91 @@ section {
     -webkit-text-stroke: 0.05rem var(--darker);
     color: transparent;
 }
-/*******************/
-
-
-
 
 /*********Sections**********/
-section:nth-of-type(1) {
+.about-section {
+    margin-top: 5rem;
+    width: 100vw;
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 1rem 4rem;
+    position: relative;
+}
+
+.section-title {
+    position: absolute;
+    top: 20%;
+    left: 0;
+    display: flex;
+    align-items: center;
+    background: var(--violet-c);
+    padding: 10px 20px;
+    border-top-right-radius: 20px;
+    border-bottom-right-radius: 20px;
+}
+
+.section-title > span {
+    display: block;
+    clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
+    background: var(--violet-c);
+    width: 1rem;
+    height: 1rem;
+    padding: 20px;
+    animation: rotate 10s infinite linear;
+}
+
+.section-title > h1 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: clamp(1.4rem,, 8rem); 
+    font-family: var(--righteous);
+    color: var(--white-100);
+}
+
+.about-container {
+    margin-top: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    width: 100%;
+    max-width: 1400px;
+    padding: 1rem 2rem;
+    gap: 5rem;
+}
+
+.avatar {
+    min-width: 300px;
+    max-width: 25vw;
+    display: block;
+    margin: auto;
+}
+
+.avatar > img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    pointer-events: none;
+}
+.content {
+    height: 100%;
+    min-width: 400px;
+    max-width: 700px;
+    width: 100%;
+
+}
+.content p {
+    color: var(--darker);
+    font-family: var(--poppins);
+    font-size: clamp(1.5rem, 3vw, 2.8rem); 
+    text-align: left;
+    line-height: 4rem;
+    padding: 1rem 2rem;
+}
+/*section:nth-of-type(1) {
     background: pink;
 }
 section:nth-of-type(2) {
@@ -302,7 +401,7 @@ section:nth-of-type(3) {
 }
 section:nth-of-type(4) {
     background: cyan;
-}
+}*/
 /**************************/
 
 /*Animations*/
@@ -325,4 +424,21 @@ section:nth-of-type(4) {
      transform: translateY(0%);
     }
   }
+
+  @keyframes overlaying {
+    to {
+        opacity: 1;
+    }
+  }
+
+  @keyframes rotate {
+    from {
+      transform: rotate(0deg);
+    }
+    to {
+      transform: rotate(359deg);
+      filter: saturatee(5%);
+    }
+  }
+/**************************/
 
