--- a/Level-1/Task_1_PORTFOLIO/style.css
+++ b/Level-1/Task_1_PORTFOLIO/style.css
@@ -18,7 +18,7 @@
     --white-200: #fafafa
     --white-300: #f5f5f5;
     --white-400: #f0f0f03b;
-    --white-500: #ebebeb;
+    --white-500: #e0e0e0;
     --darker: #000;
 }
 ::-webkit-scrollbar {
@@ -33,20 +33,35 @@
     background: var(--white-500);
 }
 
-html {
-    scroll-behavior: smooth;
-}
-
 ::selection {
     background-color: var(--white-100);
     color: var(--violet-c);
 }
+
+
+html {
+    scroll-behavior: smooth;
+}
+
 
 body {
     background: var(--white-200);
     overflow-x: hidden;
 }
 
+.scroll-watcher {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 4px;
+    background: linear-gradient(to right , var(--violet-c) , var(--violet-300));
+    transform-origin: left;
+    scale: 0 1;
+    animation: scroll-watching linear;
+    animation-timeline: scroll();
+    z-index: 999;
+}
 
 .header-section {
     width: 100vw;
@@ -69,7 +84,7 @@ nav {
     gap: 2rem;
     height: 10vh;
     margin: auto;
-    z-index: 99;
+    z-index: 900;
     animation: slide-in 3.5s ease-in-out forwards;
     transform: translateY(-6rem);
     /*box-shadow: 0 2px 10px rgba(0, 0, 0, 0.04);*/
@@ -79,11 +94,6 @@ nav {
 
 .nav-toggle {
     display: none;
-}
-
-.nav-toggle:checked .nav-toggle-label  {
-    transform: rotate(45deg);
-    background: red;
 }
 
 .nav-links {
@@ -147,10 +157,13 @@ nav {
 .nav-toggle:checked + .nav-links {
     transform: scaleY(1);
 }
+
+
+
 .nav-toggle:checked + .nav-links .link {
     animation: overlaying 1s linear forwards;
-    opacity: 1;
-    transform: translateY(0);
+    opacity: 0;
+    transform: translateY(30%);
 }
 
 .logo-wrapper {
@@ -162,7 +175,6 @@ nav {
 
 .logo {
     max-width: 50px;
-    min-width: 40px;
 }
 .logo > a > img {
     width: 100%;
@@ -323,28 +335,33 @@ nav {
     color: transparent;
 }
 
-/*********Sections**********/
+/*********ABOUT-SECTION**********/
 .about-section {
-    margin-top: 5rem;
     width: 100vw;
     min-height: 100vh;
     display: flex;
     align-items: center;
-    justify-content: center;
-    padding: 1rem 4rem;
+    justify-content: space-between;
+    padding: 2rem 4rem;
     position: relative;
 }
 
 .section-title {
     position: absolute;
-    top: 20%;
-    left: 0;
+    top: 30%;
+    left: -10%;
     display: flex;
     align-items: center;
     background: var(--violet-c);
     padding: 10px 20px;
     border-top-right-radius: 30px;
     border-bottom-right-radius: 30px;
+    animation: text-right-slide 1s linear forwards;
+    animation-timeline: view();
+    animation-range: entry;
+    z-index: 100;
+    outline: 3px solid var(--white-100);
+    transition: 1s all;
 }
 
 
@@ -367,29 +384,64 @@ nav {
     width: 100%;
     max-width: 1600px;
     padding: 1rem 2rem;
-    gap: 5rem;
-
+    gap: 1rem;
 }
 
+
+
 .avatar {
+    overflow: hidden;
+    position: relative;
     min-width: 300px;
     max-width: 25vw;
+    height: 500px;
+    width: 100%;
     display: block;
     margin: auto;
-    filter: blur(100px);
-    transform: scale(4) translateY(200%);
+    filter: blur(50px);
     opacity: 0;
     animation: image-appear 1s linear forwards;
     animation-timeline: view();
     animation-range: entry;
+    border-radius: 30px;
+    transition: 1s;
+    z-index: 20;
+}
+
+.avatar::after {
+    content: '';
+    position: absolute;
+    width: 500px;
+    height: 500px;
+    background: var(--violet-c);
+    inset: 0;
+    border-radius: 50%;
+    filter: blur(70px);
+    mix-blend-mode: screen;
+    opacity: 0.2;
+    transition: 1s all;
+}
+
+.avatar:hover::after {
+    transition: 1s all;
+    opacity: 0.6;
 }
 
 .avatar > img {
+    background-size: cover;
     width: 100%;
-    height: 100%;
+    height: 500px;
     object-fit: cover;
     pointer-events: none;
+    transition: 1s all;
 }
+
+.avatar:hover > img {
+    transition: 1s all;
+    transform: scale(1.06);
+    filter: brightness(1.15);
+}
+
 .content {
     position: relative;
     height: 100%;
@@ -408,39 +460,58 @@ nav {
     right: -10%;
     bottom: -20%;
     z-index: -1;
-    
 }
+
 .content p {
-    border: 3px dotted var(--white-100);
-    backdrop-filter: blur(100px);
+    border: 2px dotted var(--white-100);
+    backdrop-filter: blur(30px);
     color: var(--darker);
     font-family: var(--poppins);
-    font-size: clamp(1.5rem, 2.2vw, 3.8rem); 
+    font-size: clamp(1.5rem, 1.6vw, 3.8rem); 
     text-align: left;
     line-height: 4rem;
     padding: 1rem 2rem;
-    transform: scale(0.9) translateY(200%);
+    transform: scale(0.9);
     filter: blur(100px);
+    transition: .6s all;
     opacity: 0;
     animation: text-appear 3s linear forwards;
     animation-timeline: view();
     animation-range: entry;
 }
-/*section:nth-of-type(1) {
-    background: pink;
+
+.content:hover p {
+    backdrop-filter: blur(40px);
+    transition: .6s all;
 }
-section:nth-of-type(2) {
-    background: orange;
+/*********SKILLS-SECTION**********/
+.skills-section {
+    background: var(--white-400);
+    width: 100vw;
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 1rem 4rem;
+    position: relative;
+    border: 3px solid red;
 }
-section:nth-of-type(3) {
-    background: red;
+/*********Projects-SECTION**********/
+.projects-section {
+    background: green;
+    width: 100vw;
+    min-height: 100vh;
+    padding: 1rem 4rem;
+    position: relative;
 }
-section:nth-of-type(4) {
-    background: cyan;
-}*/
-/**************************/
 
 /*Animations*/
+@keyframes scroll-watching {
+    to {
+        scale: 1 1;
+    }
+}
+
 @keyframes scale {
     to {
         transform: scale(1);
@@ -455,29 +526,14 @@ section:nth-of-type(4) {
     }
 
 }
+
 @keyframes slide {
     to {
      transform: translateY(0%);
     }
   }
 
-  @keyframes overlaying {
-    to {
-        opacity: 1;
-    }
-  }
-
-  @keyframes rotate {
-    from {
-      transform: rotate(0deg);
-    }
-    to {
-      transform: rotate(359deg);
-      filter: saturatee(5%);
-    }
-  }
-
-  @keyframes image-appear {
+@keyframes image-appear {
     to {
         filter: blur(0);
         transform: scale(1);
@@ -485,21 +541,51 @@ section:nth-of-type(4) {
     }
   }
 
-  @keyframes text-appear {
+@keyframes text-appear {
     to {
         filter: blur(0);
         opacity: 1;
         transform: translateY(0);
     }
   }
+
+@keyframes text-right-slide {
+    to {
+        left: 0;
+    }
+  }
+
+@keyframes overlaying {
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
 /************MEDIA-QUERIES**************/
 
 @media  (max-width: 500px) {
+    .logo-wrapper > .ramdi,.elmostafa {
+        display: none;
+    }
+
+    .avatar {
+        height: 400px;
+    }
+
     .avatar,.content, .content p {
         animation: none;
         opacity: 1;
         transform: translate(0);
         filter: blur(0);
+    }
+
+    .section-title {
+        animation: none;
+        left: 0;
+    }
+
+    .content {
+        margin-top: 1rem;
     }
 
     .content::after {
@@ -510,15 +596,44 @@ section:nth-of-type(4) {
         height: 750px;
     }
     .about-container {
-        gap: 0;
+        gap: 1rem;
     }
     .content p {
         text-align: center;
         text-wrap: balance;
         line-height: 3rem;
+        border: 0;
+    }
+
+    .sentence__one > .t-one  {
+        letter-spacing: 1px;
+    }
+
+    .sentence__two > .t-two  {
+        letter-spacing: 1px;
+    }
+
+    .sentence__three > .t-three  {
+        letter-spacing: 2px;
+    }
+
+    ::-webkit-scrollbar {
+        display: none;
+    }
+    ::-webkit-scrollbar-button {
+        display: none;
+    }
+    ::-webkit-scrollbar-thumb {
+        display: none;
+
     }
 }
 @media  (max-width: 1300px) {
+    .section-title {
+        animation: none;
+        left: 0;
+    }
+
     .avatar,.content, .content p {
         animation: none;
         opacity: 1;
@@ -528,6 +643,9 @@ section:nth-of-type(4) {
 
     .content::after {
         display: none;
+    }
+    .content p {
+        border: 0;
     }
     .about-container {
         gap: 0;
