--- a/Level-1/Task_1_PORTFOLIO/style.css
+++ b/Level-1/Task_1_PORTFOLIO/style.css
@@ -20,6 +20,7 @@
     --white-400: #f0f0f03b;
     --white-500: #e0e0e0;
     --darker: #000;
+    --gray: lightgray
 }
 ::-webkit-scrollbar {
     background-color: var(--white-100);
@@ -69,7 +70,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 1rem 4rem;
+    padding: 2rem 4rem;
     overflow: hidden;
 }
 
@@ -341,7 +342,7 @@ nav {
     min-height: 100vh;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     padding: 2rem 4rem;
     position: relative;
 }
@@ -378,7 +379,7 @@ nav {
 .about-container {
     margin-top: 2rem;
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     flex-wrap: wrap;
     width: 100%;
@@ -394,7 +395,7 @@ nav {
     position: relative;
     min-width: 300px;
     max-width: 25vw;
-    height: 500px;
+    height: 400px;
     width: 100%;
     display: block;
     margin: auto;
@@ -412,7 +413,7 @@ nav {
     content: '';
     position: absolute;
     width: 500px;
-    height: 500px;
+    height: 400px;
     background: var(--violet-c);
     inset: 0;
     border-radius: 50%;
@@ -430,7 +431,7 @@ nav {
 .avatar > img {
     background-size: cover;
     width: 100%;
-    height: 500px;
+    height: 400px;
     object-fit: cover;
     pointer-events: none;
     transition: 1s all;
@@ -488,14 +489,36 @@ nav {
 .skills-section {
     background: var(--white-400);
     width: 100vw;
-    min-height: 100vh;
-    display: flex;
+    min-height: 120vh;
+    /*display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: center;*/
     padding: 1rem 4rem;
     position: relative;
     border: 3px solid red;
 }
+
+.skills-wrapper {
+    margin-inline: auto;
+    max-width: 1000px;
+}
+
+.skills__header {
+    margin-top: 6rem;
+}
+
+.skills__header p {
+    text-align: center;
+    line-height: 3.5rem;
+    font-family: var(--poppins);
+    font-weight: 600;
+    font-size: clamp(1rem ,1.5rem, 3vw);
+    color: var(--gray);
+}
+
+
+
+
 /*********Projects-SECTION**********/
 .projects-section {
     background: green;
@@ -569,7 +592,7 @@ nav {
     }
 
     .avatar {
-        height: 400px;
+        height: 320px;
     }
 
     .avatar,.content, .content p {
