--- a/Level-1/Task_1_PORTFOLIO/style.css
+++ b/Level-1/Task_1_PORTFOLIO/style.css
@@ -487,15 +487,14 @@ nav {
 }
 /*********SKILLS-SECTION**********/
 .skills-section {
-    background: var(--white-400);
+    position: relative;
     width: 100vw;
     min-height: 100vh;
-    /*display: flex;
-    align-items: center;
-    justify-content: center;*/
     padding: 1rem 4rem;
-    position: relative;
-    /*border: 3px solid red;*/
+    background: var(--white-400);
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .skills-wrapper {
@@ -504,7 +503,7 @@ nav {
 }
 
 .skills__header  {
-    margin-top: 6rem;
+    margin-top: 4rem;
     background-clip: text;
     background-repeat: no-repeat;
     background-size: 0% 100%;
@@ -522,7 +521,7 @@ nav {
     text-align: center;
     line-height: 3.5rem;
     font-family: var(--poppins);
-    font-weight: 600;
+    font-weight: 400;
     font-size: clamp(1rem ,1.5rem, 3vw);
 }
 
@@ -539,7 +538,8 @@ nav {
     animation-timeline: view();
     animation-range: entry;
     opacity: 0;
-    transform: translateY(100%);
+    transform: translateY(50%);
+    filter: blur(5px);
   }
 
 .card-container .card {
@@ -559,13 +559,18 @@ nav {
     left: 35%;
 }
 
+.card .span-holder {
+    display: flex;
+}
+
 .card span {
+    pointer-events: none;
     position: absolute;
     z-index: 104;
+    left: 0;
     font-family: var(--days);
     font-size: clamp(3rem ,5rem , 6vw);
     text-transform: uppercase;
-    left: 0;
     letter-spacing: 2px;
     -webkit-text-stroke: 0.05rem var(--violet-c);
     color: transparent;
@@ -589,16 +594,121 @@ nav {
     width: 100%;
     height: 100%;
     filter: invert(1);
+    cursor: pointer;
 }
 
 
 /*********Projects-SECTION**********/
 .projects-section {
-    background: green;
     width: 100vw;
     min-height: 100vh;
-    padding: 1rem 4rem;
+    padding: 4rem 4rem;
     position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.projects-wrapper {
+    margin-inline: auto;
+    max-width: 1400px;
+}
+
+.projects {
+    padding: 1rem;
+    margin: auto;
+    display: flex;
+    gap: 2rem;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+}
+
+.projects .project {
+    background: #000;
+    display: flex;
+    flex-direction: column;
+    flex: 1 100%;
+    position: relative;
+    width: 100%;
+    min-width: 300px;
+    max-width: 500px;
+    border-radius: 30px;
+    overflow: hidden;
+    box-sizing: border-box;
+    transition: .5s all;
+    outline: var(--violet-100) 4px solid;
+}
+
+.project:hover {
+    transition: .5 all;
+    border-radius: 30px;
+}
+
+.project:hover .cover {
+    transition: .5s all;
+    filter: grayscale(1) blur(2px);
+}
+
+
+.project .cover {
+    background-position: center;
+    object-fit: cover;
+    background-size: cover;
+    width: 100%;
+    height: 100%;
+    transition: .5s all;
+}
+
+.project:hover .content-hover {
+    transition: .5s all;
+    transform: translateY(0);
+}
+
+.content-hover {
+    transition: .5s all;
+    background: linear-gradient(to top, var(--violet-c) 10% 10%, transparent 100%);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    position: absolute;
+    height: 70%;
+    bottom: 0;
+    transform-origin: bottom;
+    transform: translateY(100%);
+}
+
+.content-hover .project__content {
+    text-align: center;
+    text-wrap: center;
+    padding: 10px;
+}
+
+.content-hover .project__content p {
+    font-size: 1rem;
+    font-family: var(--poppins);
+    color: var(--white-100);
+}
+
+.project__link {
+    max-width: 40px;
+    background: var(--white-100);
+    padding: 5px;
+    border-radius: 50%;
+}
+
+.project__link a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    text-decoration: none;
+}
+
+.project__link a img {
+    width: 100%;
+    height: 100%;
 }
 
 /*Animations*/
@@ -606,6 +716,7 @@ nav {
     to {
         opacity: 1;
         transform: translateY(0);
+        filter: blur(0);
     }
 }
 @keyframes scroll-watching {
@@ -684,6 +795,7 @@ nav {
     .card {
       flex-basis: 40%; /* Two cards per row */
     }
+    
   }
   
 @media (max-width: 480px) {
@@ -754,7 +866,9 @@ nav {
     }
     ::-webkit-scrollbar-thumb {
         display: none;
-
+    }
+    .skills__header p {
+        font-weight: 600;
     }
 }
 @media  (max-width: 1300px) {
