--- a/Level-1/Task_2_LANDING_PAGE/styles.css
+++ b/Level-1/Task_2_LANDING_PAGE/styles.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Blinker:wght@600&family=Geo&family=Poppins:wght@100,400,600;500&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Blinker:wght@600&family=Geo&family=Poppins:wght@100;300;400;600&display=swap');
 :root {
     --poppins: 'Poppins', sans-serif;
     --geo: 'Geo', sans-serif;
@@ -28,9 +27,11 @@ body {
     width: 100vw;
 }
 
+
 .header {
     width: 100vw;
     height: 100vh;
+    overflow: hidden;
 }
 
 .bg-clip {
@@ -39,7 +40,7 @@ body {
     bottom: 0;
     right: 0;
     top: 0;
-    opacity: .2;
+    opacity: .5;
     /*filter:invert(1);*/
     mix-blend-mode: overlay;
     object-fit: cover;
@@ -85,12 +86,13 @@ body {
 }
 
 .searchbar {
+    margin-left: 5rem;
     position: relative;
     display: flex;
     align-items: center;
 }
 .searchbar input {
-    padding: 1rem 3rem;
+    padding: .5rem 3rem;
     outline: 0;
     border: 30px;
     width: 100%;
@@ -100,12 +102,16 @@ body {
     border: 1px solid var(--stroke);
     color: #fff;
     font-family: var(--poppins);
-    font-size: 1.1rem;
+    font-size: .9rem;
 }
 
 .searchbar input:focus {
     background: #160049;
     box-shadow: 0 0 40px rgba(90, 20, 255, 0.5);
+}
+
+.input:focus + .ctrl {
+    display: none;
 }
 
 .searchbar input::placeholder {
@@ -118,14 +124,14 @@ body {
     position: absolute;
     left: 0;
     padding-left: 10px;
-    width: 40px;
-    height: 40px;
+    width: 38px;
+    height: 38px;
     pointer-events: none;
 }
 
 .searchbar span {
     position: absolute;
-    right: 1.5rem;
+    right: .6rem;
     color: #BEC5FF;
     font-weight: 100;
     font-family: var(--poppins);
@@ -163,6 +169,7 @@ body {
     font-family: var(--poppins);
     font-size: 1.1rem;
     transition: .3s all;
+    letter-spacing: 1px;
 }
 .span:hover + .link {
     transform: translateY(-4px);
@@ -170,10 +177,11 @@ body {
 }
 
 .btn {
-    padding: .8rem 1.5rem;
+    padding: .6rem 2rem;
     border: 2px solid #19206C;
     background: var(--darker);  
-    border-radius: 30px;  
+    border-radius: 15px;  
+    cursor: pointer;
 }
 
 .btn:hover {
@@ -186,4 +194,120 @@ body {
     font-weight: 600;
     text-decoration: none;
     color: #ffffff;
+}
+
+.content {
+    margin-inline: auto;
+    min-height: 800px;
+    margin-top: 5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.hero {
+    width: 300px;
+    height: 300px;
+    mix-blend-mode:lighten;
+}
+
+.content h1 {
+    color: var(--h1);
+    font-family: var(--blinker);
+    text-align: center;
+    font-size: clamp(1rem, 3rem, 5vw);
+}
+
+.code-card {
+    position: relative;
+    margin-top: 3rem;
+    padding: 2rem 2rem;
+    border-radius: 20px;
+    border: 2px solid #7C33F9;
+    background: linear-gradient(to bottom,#210e4e 0%, #0E0B23 100% );
+    box-shadow: 0 5px 40px rgba(0,0,0, 0.2);
+}
+
+.quick {
+    color: #BEC5FF;
+    font-family: var(--geo);
+    font-size: 36px;
+    text-align: center;
+    position: absolute;
+    top: -15%;
+    left: 22%;
+    background: #0E0B23;
+    border: 2px solid #7C33F9;
+    padding: 10px 2rem;
+    border-radius: 30px;
+    pointer-events: none;
+}
+
+.bash-code {
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.left {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 3rem;
+}
+
+.left-p > span {
+    color: #606060;
+    font-family: var(--poppins);
+    font-weight: 600;
+}
+
+.left-p > p {
+    color: #ffffff;
+    font-family: var(--poppins);
+}
+
+.colored {
+    color: #BEC5FF;
+}
+
+.copy-board {
+    position: relative;
+    width: 40px;
+    height: 40px;
+    padding: 10px;
+    border-radius: 10px;
+    transition: .5s ease;
+    cursor: pointer;
+    background: transparent;
+    outline: none;
+    border: 0;
+}
+
+.copy-board > img:active + .copied {
+    opacity: 1;
+}
+
+.copied {
+    position: absolute;
+    bottom: -16px;
+    right: 0;
+    color: #f1f1f1f1;
+    font-family: var(--geo);
+    font-size: .8rem;
+    opacity: 0;
+}
+
+.copy-board:hover {
+    background: #29154d;
+    transition: .5s ease;
+}
+
+.copy-board img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block;
 }
