--- a/Level-1/Task_2_LANDING_PAGE/styles.css
+++ b/Level-1/Task_2_LANDING_PAGE/styles.css
@@ -18,20 +18,25 @@
     box-sizing: border-box;
 }
 
-body {
-    background: url('/assets/bg.jpg');
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    height: 100vh;
-    width: 100vw;
+html {
+    scroll-behavior: smooth;
 }
 
+body {
+    background: #0b041a;
+    font-family: var(--poppins);
+    width: 100vw;
+    height: 100vh;
+}
 
 .header {
     width: 100vw;
     height: 100vh;
     overflow: hidden;
+    background: url('/assets/bg.jpg');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
 }
 
 .bg-clip {
@@ -60,6 +65,8 @@ body {
     left: 0;
     width: 100%;
     height: 8vh;
+    backdrop-filter: blur(20px);
+    z-index: 900;
 }
 
 .logo-container a {
@@ -99,7 +106,6 @@ body {
     height: 100%;
     border-radius: 30px;
     background: #2909758f;
-    border: 1px solid var(--stroke);
     color: #fff;
     font-family: var(--poppins);
     font-size: .9rem;
@@ -107,6 +113,7 @@ body {
 
 .searchbar input:focus {
     background: #160049;
+    border: 2px solid var(--stroke);
     box-shadow: 0 0 40px rgba(90, 20, 255, 0.5);
 }
 
@@ -226,7 +233,7 @@ body {
     border-radius: 20px;
     border: 2px solid #7C33F9;
     background: linear-gradient(to bottom,#210e4e 0%, #0E0B23 100% );
-    box-shadow: 0 5px 40px rgba(0,0,0, 0.2);
+    box-shadow: 0 5px 40px rgba(0,0,0, 0.3);
 }
 
 .quick {
@@ -275,6 +282,7 @@ body {
 
 .copy-board {
     position: relative;
+    margin-top: 10PX;
     width: 40px;
     height: 40px;
     padding: 10px;
@@ -310,4 +318,239 @@ body {
     height: 100%;
     object-fit: cover;
     display: block;
+}
+
+.features {
+    margin: auto;
+    margin-inline: auto;
+    width: 100vw;
+    overflow: hidden;
+    background: radial-gradient(  #29164e 10%,  #0b041a);
+    padding: 1rem 2rem;
+}
+
+
+
+.row {
+    margin: 1rem 0;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 1rem;
+}
+.col {
+    flex-grow: 1 0; 
+    width: 100%;
+    background: #000000;
+    max-width: 350px;
+    padding: 1rem 2rem;
+    border-radius: 10px;
+    border: 1px solid  #221341;
+}
+
+.head {
+    text-align: center;
+    padding: 1rem;
+}
+
+.head__label {
+    margin: 1rem 0;
+    text-align: center;
+    color: var(--stroke);
+}
+
+.text {
+    display: block;
+    color: rgb(235, 235, 235);
+    text-align: left;
+}
+
+.text p {
+    line-height: 2rem;
+}
+
+.card-svg {
+    fill: #5200FF;
+    width: 100px;
+    height: 100px;
+}
+
+strong {
+    font-weight: bold;
+    color: var(--h1)
+}
+
+.dots {
+    display: none;
+    position: absolute;
+    right: 1rem;
+    top: 1rem;
+    z-index: 992;
+}
+
+.btn-dot  {
+    position: relative;
+    display: flex;
+    gap: 5px;
+    outline: 0;
+    border: 0;
+    background: transparent;
+    z-index: 50;
+    cursor: pointer;
+    transition: .5s all;
+    padding: 1rem;
+}
+
+.btn-dot:focus + .menu-hover {
+    visibility: visible;
+}
+
+.btn-dot span {
+    width: 8px;
+    height: 8px;
+    background: var(--stroke);
+    border-radius: 50%;
+}
+
+.menu-hover {
+    visibility: hidden;
+    background: var(--stroke);
+    padding: 1rem 3rem;
+    position: absolute;
+    bottom: -12rem;
+    right: 5%;
+    z-index: 40;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+    border-radius: 10px;
+    transition: .5s all;
+    z-index: 30;
+    box-shadow: 0 2px 10px rgba(0,0,0, 0.3);
+}
+
+.menu-hover a {
+    text-decoration: none;
+    margin-bottom: 10px;
+}
+
+.menu-hover .span {
+    color: white;
+    font-family: var(--poppins);
+    font-size: 1.2rem;
+    padding: 5px 10px;
+    border-radius: 10px;
+    font-weight: 600;
+    display: inline-block;
+}
+
+.get-started {
+    outline: 0;
+    background: transparent;
+    border: 0;
+}
+
+.get-started a {
+    display: inline-flex;
+    font-size: 1.2rem;
+    font-family: var(--poppins);
+    background: black;
+    outline: 0;
+    border: 0;
+    text-decoration: none;
+    color: white;
+    padding: 5px 10px;
+    border-radius: 10px;
+    font-weight: 600;
+    white-space: nowrap;
+
+}
+
+.menu-hover .get-started a:hover {
+    background: #160049;
+}
+
+@media (max-width: 1100px) {
+    .searchbar input {
+        padding: .5rem 10px;
+    }
+
+    .searchbar input::placeholder {
+        opacity: 0;
+    }
+
+    .row {
+        flex-wrap: wrap;
+    }
+
+
+}
+
+@media (max-width: 880px) {
+    .right-nav {
+        gap: 10px;
+    }
+
+    .btn {
+        padding: .5rem 1rem;
+    }
+    .btn a {
+        font-size: .8rem;
+    }
+    .logo-container a span {
+        display: none;
+    }
+}
+
+@media (max-width: 550px) {
+    .right-nav {
+        display: none;
+    }
+
+    .ctrl {
+        display: none;
+    }
+
+    .btn {
+        margin-right: 1rem;
+        padding: 10px;
+        width: 100px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    } 
+
+    .logo-redux {
+        margin-left: 1rem;
+    }
+
+    .input {
+        margin-right: 7rem;
+        min-width: 50px;
+    }
+
+    .dots {
+        display: block;
+    }
+
+    .dots {
+        margin-right: 1rem;
+    }
+
+    .hero {
+        height: 250px;
+        width: 250px;
+    }
+
+    .left {
+        gap: 1rem;
+    }
+
+    .searchbar input::placeholder {
+        opacity: 1;
+        padding-left: 2rem;
+    }
+    
 }
