--- a/Level-1/Task_2_LANDING_PAGE/styles.css
+++ b/Level-1/Task_2_LANDING_PAGE/styles.css
@@ -25,8 +25,7 @@ html {
 body {
     background: #0b041a;
     font-family: var(--poppins);
-    width: 100vw;
-    height: 100vh;
+    overflow-x: hidden;
 }
 
 .header {
@@ -465,7 +464,6 @@ strong {
     border-radius: 10px;
     font-weight: 600;
     white-space: nowrap;
-
 }
 
 .menu-hover .get-started a:hover {
