--- a/Level-1/Task_2_LANDING_PAGE/styles.css
+++ b/Level-1/Task_2_LANDING_PAGE/styles.css
@@ -40,6 +40,7 @@ body {
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    padding: 0 20px;
 }
 
 .bg-clip {
@@ -49,7 +50,6 @@ body {
     right: 0;
     top: 0;
     opacity: .5;
-    /*filter:invert(1);*/
     mix-blend-mode: overlay;
     object-fit: cover;
     background-size: cover;
@@ -231,7 +231,7 @@ body {
 
 .code-card {
     position: relative;
-    margin-top: 3rem;
+    margin-top: 5rem;
     padding: 2rem 2rem;
     border-radius: 20px;
     border: 2px solid #7C33F9;
@@ -242,11 +242,13 @@ body {
 .quick {
     color: #BEC5FF;
     font-family: var(--geo);
-    font-size: 36px;
+    font-size: clamp(1.8rem,36px,2vw);
     text-align: center;
     position: absolute;
     top: -15%;
     left: 22%;
+    right: 22%;
+    text-wrap: nowrap;
     background: #0E0B23;
     border: 2px solid #7C33F9;
     padding: 10px 2rem;
@@ -326,12 +328,13 @@ body {
 .mouse-scroll {
     position: relative;
     display: block;
-    margin-top: 5rem;
     width: 1rem;
     padding-top: 30px;
     border: 1px solid var(--stroke);
     border-radius: 10px;
     overflow: hidden;
+    margin-top: 4rem;
+    transform: translateY(2rem);
 }
 
 .mouse {
@@ -511,6 +514,66 @@ strong {
     background: black;
 }
 
+.footer {
+    padding: 50px;
+}
+
+.footer-content {
+    max-width: 1600px;
+    margin-inline: auto;
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    padding: 2rem;
+}
+
+
+.label__footer {
+    color: #5629B7;
+    font-weight: 600;
+    font-family: var(--poppins);
+    font-size: 1.2rem;
+    margin-bottom: 1rem;
+}
+
+ul {
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+    list-style: none;
+    gap: 1rem;
+}
+
+li {
+    font-family: var(--poppins);
+    cursor: pointer;
+}
+
+li a {
+    color: #606060;
+    text-decoration: none;
+}
+
+li a:hover {
+    color: var(--h1);
+    text-decoration: underline;
+}
+
+.signature {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.signature p {
+    color: #606060;
+    text-align: center;
+    padding: 2rem;
+    font-size: clamp(0.8rem, 1rem, 2vw);
+}
+
+
 @media (max-width: 1100px) {
     .searchbar input {
         padding: .5rem 10px;
@@ -544,6 +607,11 @@ strong {
 
     .dots {
         transform: translateY(1rem);
+    }
+
+    .footer-content {
+        flex-direction: column;
+        gap: 3rem;
     }
 
 }
@@ -603,6 +671,26 @@ strong {
     .searchbar input::placeholder {
         opacity: 1;
         padding-left: 2rem;
+    }
+    
+    .content {
+        gap: 2rem;
+    }
+
+    .quick {
+        left: 18%;
+        top: -12%;
+        padding: 5px 1rem;
+    }
+
+    .left-p {
+        font-size: .9rem;
+        text-wrap: nowrap;
+    }
+
+    .mouse-scroll {
+        margin-top: .1rem;
+        transform: translateY(0);
     }
     
 }
